# cyaward-claude

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  weekly.yml
data/historical/: AwardsSharePlayers.csv  awards_2024_2025.csv  fg_pitching_2015.csv  fg_pitching_2016.csv  fg_pitching_2017.csv  fg_pitching_2018.csv  fg_pitching_2019.csv  fg_pitching_2021.csv  fg_pitching_2022.csv  fg_pitching_2023.csv  fg_pitching_2024.csv  fg_pitching_2025.csv  standings_2015.csv  standings_2016.csv  standings_2017.csv  standings_2018.csv  standings_2019.csv  standings_2021.csv  standings_2022.csv  standings_2023.csv  standings_2024.csv  standings_2025.csv  training_2015_2023.parquet  training_2015_2025.parquet
data/predictions/: 2026-05-12.parquet  2026-05-13.parquet  2026-05-14.parquet  2026-05-15.parquet  2026-05-16.parquet  (+56 more)
models/: calibrator_v1.pkl  voter_model_gbr_v1.pkl  voter_model_ridge_v1.pkl
reports/: 2026-W20.md  2026-W21.md  2026-W22.md  2026-W23.md  2026-W24.md  2026-W25.md  2026-W26.md  2026-W27.md  2026-W28.md  2026-W29.md  backtest_v1.md
site/: index.html  style.css
src/: backtest.py  config.py  eligibility.py  features.py  fetch.py  projector.py  ranker.py  render.py  voter_model.py  weekly_report.py
templates/: dashboard.html.j2
tests/: conftest.py  test_backtest.py  test_build_training_data.py  test_cli_daily.py  test_config.py  test_eligibility.py  test_features.py  test_fetch.py  test_projector.py  test_ranker.py  test_render.py  test_voter_model.py  test_weekly_report.py
(+8 files in other folders)
